@@ -6,6 +6,8 @@ Revelation changelog
 
 	* added Password Safe 1.x import/export
 
+	* added Password Safe 2.x import/export
+
 2005-08-17  Erik Grinaker <erikg@codepoet.no>
 
 	* default lock timeout for applet set to 10 minutes
